--- a/course.yml
+++ b/course.yml
@@ -29,10 +29,35 @@ chunks:
 
         Remember, this image shows the model that RELATE is trying to put out
         of business:
+        
+        Check out the [linear algebra recap](flow:001-linalg-recap). Do it now. Do it.
 
-        <img src="repo:images/classroom.jpeg">
+        You can also go there using a
+        
 
-        (![creative commons](repo:images/cc.png)/by [kevin dooley](https://secure.flickr.com/photos/pagedooley/13905987989/) on Flickr)
+        You can also jump directly to the [sample quiz](flow:quiz-test).
+
+        Look at the amazing embedded [PDF](repocur:pdfs/sample.pdf).
+
+        In addition to interactive content, RELATE also supports [static (i.e.
+        non-interactive) pages](staticpage:test).
+
+        Remember, this image shows the model that RELATE is trying to put out
+        of business:
+           Check out the [linear algebra recap](flow:001-linalg-recap). Do it now. Do it.
+
+        You can also go there using a
+        
+
+        You can also jump directly to the [sample quiz](flow:quiz-test).
+
+        Look at the amazing embedded [PDF](repocur:pdfs/sample.pdf).
+
+        In addition to interactive content, RELATE also supports [static (i.e.
+        non-interactive) pages](staticpage:test).
+
+        Remember, this image shows the model that RELATE is trying to put out
+        of business:
 
 
 
